 - Pataki Istvan and Vincze Gabor -- added the parser and a manager, .gnd files
   thrown out
#43-45b  March 1999 - April 1999
 DEVELOPMENT VERSIONS
 - parser and code generation rewritten
 - data structures redesigned
 - made two-way tool
 - user interface redesigned: place manager at left, toolbar icons, tooltips etc.
#46  May 1 1999
 GNED 1.2 ALPHA 1 released
#47 June 21, 1999
  - all sources checked in under CVS
  - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
  - version.log renamed to ChangeLog
July 11, 1999
  - small fixes and enhancements
July 17, 1999
  - fixed the bug with scrolled canvas
  - resizeBar implemented in widgets.tcl -- should be updated in Tkenv and Plove too!
Aug 2, 1999
  - OMNETPP_BITMAP_PATH turned into real path (a list of directories). The
    separator char is ";" on Windows, and ":" or ";" on Unix.
Aug 11, 1999
  - changed widget.tcl -- must be updated elsewhere!
Aug 15, 1999
  - fixed bugs in nedfile.cc (lines 86,91,92 contained "==" instead of "=")
Aug 18, 1999
  - initial version of syntax highlight implemented
Aug 26, 1999
  - find/replace dialogs added
Aug 28, 1999
  - ddfields() array introduced for performance reasons
Aug 30, 1999
  - status bar added for text editor
------ omnetpp-2.0b1 released ------
------ omnetpp-2.0b2 released ------
Oct 11, 1999
  - fixed problem with resizing parent module
Oct 12, 1999
  - bugfix in balloon.tcl
  - fixes on comment parsing/generating:
      eliminated space from "// ---" comments
      eliminated annoying generation of extra blank lines (except after "import")
Nov 11, 1999
  - begun writing Properties dialogs
Nov 12, 1999
  - tableEdit widget added
Nov 13, 1999
  - file props.tcl split to submprops.tcl, connprops.tcl,... (6 files)
Nov 14, 1999
  - submprops.tcl works; tbd comment handling; other dialogs; efficiency
Nov 20, 1999
  - implemented direct editing of module/submod names on the canvas
    (new file: canvlbl.tcl; renameItem to be finished!)